--- a/src/common/formik/upload-image/styles.scss
+++ b/src/common/formik/upload-image/styles.scss
@@ -7,3 +7,9 @@
   align-items: center;
   border: 1px solid rgba(0, 0, 0, 0.2);
 }
+
+.upload-img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
