--- a/src/components/auth/reset-password/styles.scss
+++ b/src/components/auth/reset-password/styles.scss
@@ -1,9 +1,9 @@
 @import "../../../styles/variables.scss";
 
-.login-block {
+.email-verified-block {
   position: absolute;
   width: 350px;
-  height: 350px;
+  height: 150px;
   right: 10%;
   top: 50%;
   transform: translateY(-50%);
