--- a/src/components/step-modal/styles.scss
+++ b/src/components/step-modal/styles.scss
@@ -1,15 +1,50 @@
 .step-container {
   width: 100%;
-  height: 360px;
+  min-height: 360px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   padding: 2em;
   background: #fff;
+  position: relative;
 }
 
 .button-step-container {
   display: flex;
   justify-content: center;
+}
+
+.love-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.user-container {
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  width: 240px;
+  height: 30px;
+  position: absolute;
+  z-index: 9;
+  left: 38.5%;
+  top: 70%;
+  transform: translateY(-70%);
+  background: #fff;
+  border-radius: 10px;
+  padding: 5px;
+  box-shadow: inset 0px 0px 5px 1px rgba(0, 0, 0, 0.1);
+}
+
+.user-block {
+  height: inherit;
+  transition: all 0.3s;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  padding-left: 5px;
+  &:hover {
+    background: rgba(0, 0, 0, 0.1);
+    border-radius: 8px;
+  }
 }
